# classroom_downloader_api

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALISE_REQUESTS.md  CLASSROOM_DOWNLOADER_API_SPEC.md  CLAUDE.md  COMO_USAR.md  Dockerfile  GETTING_STARTED.md  GUIA_DESENVOLVIMENTO.md  PLANO_MELHORIAS.md  PROGRESSO_MELHORIAS.md  README.md  SETUP_SIMPLES.md  USAGE.md  alembic.ini  check_cookies.py  generate_encryption_key.py  import_cookies.py  pyproject.toml  requests_classrom.txt  requests_drive.txt  requirements-dev.txt  requirements.txt  setup.py  setup_rapido.bat  start_api.bat
.github/workflows/: ci.yml
app/: main.py
app/api/: security.py
app/api/middleware/: __init__.py  logging.py
app/api/routers/: __init__.py  auth.py  courses.py  courses_simple.py  downloads.py  health.py
app/core/: config.py  logging.py
app/db/: __init__.py  database.py
app/domain/: models.py
app/repositories/: __init__.py  base.py  course_repository.py  coursework_repository.py  download_job_repository.py  user_repository.py  video_link_repository.py
app/schemas/: __init__.py  auth.py  course.py  coursework.py  download.py  user.py  video_link.py
app/services/: cookie_manager.py  credentials_manager.py  google_classroom.py  google_classroom_simple.py  http_client.py  video_downloader.py
app/workers/: __init__.py  download_worker.py
migrations/: env.py
tests/: conftest.py
tests/integration/: test_courses_router.py  test_downloads_router.py  test_health_router.py
tests/unit/: test_repositories.py
